recursion.lessons.recursion.koch.Koch.scala.error
Koch:2: error: Missing closing brace `}' assumed here
def snowFlake (levels:Int, length:Double) {
^Koch:12: error: expected class or object definition
def snowSide(levels:Int, length:Double) {
^